# rosetta-ruchy

./: .gitattributes  .gitignore  .paiml-display.yaml  .pmat-gates.toml  ALGORITHM_COVERAGE_STATUS.md  BOOK_VALIDATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_SCIENTIFIC_REPORT.md  CONTRIBUTING.md  Cargo.toml  FINAL_PORTFOLIO_ANALYSIS.md  GEMINI.md  INTEGRATION.md  MATHEMATICAL_PROOFS_v1.20.0.md  Makefile  PHASE3_COMPLETION_REPORT.md  PHASE4_ROADMAP.md  PHASE5_ROADMAP.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_ROADMAP.md  PHASE_11_PERFORMANCE_REPORT.md  PHASE_12_STRUCTURAL_COMPLEXITY_PLAN.md  PHASE_12_STRUCTURAL_RESULTS.md  PHASE_7_INITIAL_RESULTS.md  PHASE_7_TO_10_ROADMAP.md  PHASE_8_OPTIMIZATION_RESULTS.md  PHASE_9_DOCUMENTATION_RESULTS.md  PROJECT_COMPLETION_REPORT.md  README.md  ROADMAP.md  ROADMAP_RUCHY_189.md  RUCHY_1.88.0_BREAKING_CHANGES.md  RUCHY_1_8_COMPATIBILITY.md  SPRINT37_REPORT.md  SPRINT38_REPORT.md  SPRINT39_REPORT.md  SPRINT40_REPORT.md  SPRINT41_REPORT.md  SPRINT42_REPORT.md  (+32 more)
.github/ISSUE_TEMPLATE/: breaking-change-v3.md  transpiler-validation-failure.md
.github/workflows/: bashrs-validation.yml  ci.yml  decy-validation.yml  documentation-quality.yml  dogfood-quality-gates.yml  nightly-tests.yml  quality-gates.yml  regression-check.yml  release.yml  ruchy-quality-gates.yml  test-all-rosetta-examples.yml  transpiler-issue-report.yml  transpiler-performance.yml
algorithms_v1.20.0/: fibonacci_proven.ruchy  fibonacci_proven_v2.ruchy
coverage/: tarpaulin-report.html
docs/: 15-TOOL-STRATEGY.md  BASELINE_V3_62_12.md  BREAKING_CHANGES_V3.md  COMPILATION_GUIDE.md  COMPREHENSIVE-TOOLCHAIN-VALIDATION.md  DEBUGGING_GUIDE.md  DEVELOPMENT.md  FMT_TOOL_INVESTIGATION.md  FORMAL-VERIFICATION-SHOWCASE.md  GITHUB_ISSUES_CREATED.md  MIGRATION_PATTERNS_V3.md  PARSER_BUG_V3_62_12.md  RED-TEAM-VALIDATION.md  SECURITY_AUDIT.md  SPRINT_35_RESULTS.md  SPRINT_35_V3_MIGRATION.md  SPRINT_36_FINAL_SUMMARY.md  SPRINT_36_RESULTS.md  TESTING_GUIDE.md  TRANSPILATION_VALIDATION.md  TRANSPILER_CI.md
docs/execution/: SPRINT-43-COVERAGE-FINDINGS.md  SPRINT-43-PLAN.md  SPRINT-43-SESSION-1-SUMMARY.md  SPRINT-43-TICKET-3-FINDINGS.md  SPRINT-43-TICKET-4-PLAN.md  roadmap.md
docs/guides/: bashrs-integration.md  decy-integration.md
docs/integration/: PMAT_INTEGRATION_GUIDE.md
docs/qa/: AUDIT_ACTION_PLAN.md  RESPONSE_TO_GEMINI_AUDIT_OCT14.md  gemini-audit-report-oct14.md  gemini-audit-report-oct14.yaml  sprint-43-complexity-analysis.md  sprint-44-completion-summary.md
examples/algorithms/002-quicksort/implementations/rust/: Cargo.toml
examples/algorithms/002-quicksort/implementations/rust/src/: lib.rs  main.rs
examples/algorithms/014-graph-coloring/implementations/rust/: Cargo.toml
examples/algorithms/014-graph-coloring/implementations/rust/src/: main.rs
examples/algorithms/018-heap-sort/implementations/rust/: Cargo.toml
examples/algorithms/018-heap-sort/implementations/rust/src/: main.rs
examples/algorithms/019-radix-sort/implementations/rust/: Cargo.toml
examples/algorithms/019-radix-sort/implementations/rust/src/: main.rs
examples/algorithms/020-bucket-sort/implementations/rust/: Cargo.toml
examples/algorithms/020-bucket-sort/implementations/rust/src/: main.rs
examples/algorithms/021-counting-sort/implementations/rust/: Cargo.toml
examples/algorithms/021-counting-sort/implementations/rust/src/: main.rs
examples/algorithms/022-selection-sort/implementations/rust/: Cargo.toml
examples/algorithms/022-selection-sort/implementations/rust/src/: main.rs
harness/benchmarking/: Makefile  (+3 more)
harness/runner/: Cargo.toml
harness/runner/baselines/: rust_baseline.json
harness/runner/results/: benchmark_report.json  benchmark_report.md  python_memory_profile.md  regression_report.md  rust_memory_profile.md
harness/runner/src/: binary_analyzer.rs  isolation.rs  main.rs  memory_profiler.rs  regression.rs  reporting.rs  statistics.rs
harness/runner/tests/: cli_tests.rs
mcp-server/: Cargo.toml  README.md
mcp-server/src/: analyzer.rs  language_detector.rs  lib.rs  main.rs  mcp_server.rs  pmcp_integration.rs  ruchy_tooling.rs  translator.rs
mcp-server/tests/: integration_tests.rs  pmcp_tests.rs  server_startup_tests.rs
monitoring/: quality_dashboard.ruchy
reports/: LINT-POLICY-PROPOSAL.md  LINT-WARNINGS-TRACKING.md  SPRINT-42-COMPLETE-SUMMARY.md  TEST-COVERAGE-ANALYSIS.md  TICKET-5-DAY1-SUMMARY.md  baseline_tdg_analysis.json  dashboard.html  red-team-validation-20251014-133735.md
scripts/: algorithm_coverage_generator.ruchy  analyze-lint-warnings.sh  benchmark-language-comparison-optimized.sh  benchmark-language-comparison.sh  benchmark-runner.sh  ci.ruchy  count-lint-warnings.sh  debug-dogfood.sh  diagnose_errors.sh  dogfood-all-tools.sh  fix-unused-variables.sh  generate-dashboard.sh  global_comparison.ruchy  graphs.ruchy  graphs_simple.ruchy  install-pre-commit-hook.sh  install-quality-tools-optimized.sh  install-quality-tools.sh  lint_verification.ruchy  mutation_testing.ruchy  phase6_coverage_orchestrator.ruchy  phase6_final.ruchy  phase6_report.ruchy  phase6_simple_orchestrator.ruchy  pmat-style-validation.sh  pre-commit-hook.sh  quality_gates.ruchy  red-team-validation.sh  release.sh  reproduce.ruchy  reproduce_simple.ruchy  start_mcp_server.sh  test-all-examples.sh  test-documentation.sh  test-regression.sh  test-ruchy-tools-comprehensive-optimized.sh  test-ruchy-tools-comprehensive.sh  test_advanced_tools.ruchy  test_all_examples.ruchy  test_all_examples.sh  (+6 more)
scripts/validation-tools/: Cargo.toml
scripts/validation-tools/src/: complexity_check.rs  validate_example.rs
templates/: Makefile.algorithm  enhanced-makefile.mk  simple_test_v1_27_10.ruchy  test_template_v1_27_10.ruchy
tests/: README.md  infrastructure_test.ruchy  sprint-48-tdd-validation.sh  sprint-49-edge-case-tests.sh  sprint-49-mutation-tests.sh  sprint-49-tdd-optimized.sh  sprint-51-optimization-tests-RED.sh  sprint-51-performance-benchmark.sh  sprint-52-optimization-tests-RED.sh  sprint-52-performance-benchmark.sh  sprint-53-optimization-tests-RED.sh
tickets/: PHASE6_TICKETS.md
(+504 files in other folders)
